@@ -1,12 +1,7 @@
 {
-  "count": 17,
-  "uniques": 8,
+  "count": 15,
+  "uniques": 7,
   "views": [
-    {
-      "timestamp": "2022-09-13T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-17T00:00:00Z",
       "count": 2,
