@@ -1,3 +1,11 @@
+2022-09-27T16:29:01Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3137306485
+* notice: last 14d: unq all: 7 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 271 721 / 279 738
+* notice: next accum: outdated-unq outdated-all / unq all: 272 723 / 279 738
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-13] / []
+
 2022-09-23T16:25:23Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3114186490
 * notice: last 14d: unq all: 8 17
